<resources>
    <string name="app_name">AIDrive Concept</string>
    <string name="title_home">HOME</string>
    <string name="alarm1">Alarm 1</string>
    <string name="alarm2">Alarm 2</string>
    <string name="alarm3">Alarm 3</string>
    <string name="alarm4">Alarm 4</string>
    <string name="alarm5">Alarm 5</string>
    <string name="alarm6">Alarm 6</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="options">Options</string>
    <string name="device_api_endpoint">Device API Endpoint:</string>
    <string name="cloud_api_endpoint">Cloud API Endpoint:</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="job_info">Job Info</string>
    <string name="job_name">{Job Name}</string>
    <string name="job_description">{Job Description}</string>
    <string name="job_status">Status: %s</string>
    <string name="start_date">Start Date: %s</string>
    <string name="end_date">End Date: %s</string>
    <string name="job_priority">Priority: %s</string>
    <string name="load_info">Load Info</string>
    <string name="details">Details</string>
    <string name="google_plex_mount_palo">Google Plex, Mount palo</string>
    <string name="qty_units_qty">Qty/Units: {qty}</string>
    <string name="measurement_unit_type">Measurement: {unit type}</string>
    <string name="pickup_location">Pickup Location:</string>
    <string name="accept_job">Accept Job</string>
    <string name="start_job">Start Job</string>
    <string name="finish_job">Finish Job</string>
    <string name="location_info">Location Info</string>
    <string name="task">Task</string>
    <string name="status">Status</string>
    <string name="due">Due</string>
    <string name="accepted">Accepted</string>
    <string name="delivery_location">Delivery Location:</string>
    <string name="search_name">Search Name</string>
    <string name="name">Name</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="write_something_here">Write Something here…</string>
    <string name="settings">SETTINGS</string>
</resources>