<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_gravity="end"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:text="@string/alarm1"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:text="@string/alarm2"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm3"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/b4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm4"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm5"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/b6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm6"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b5" />
</androidx.constraintlayout.widget.ConstraintLayout>