<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/jobView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/centerGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/job_info"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/job_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobDescTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/job_description"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/job_status"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/start_date"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/end_date"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/job_priority"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loadView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/centerGuide"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/load_info"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/google_plex_mount_palo"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/qty_units_qty"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/measurement_unit_type"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/locationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        android:text="@string/location_info"
        android:textColor="@color/black"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobView" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/locationInfo" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/pickupLocationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/centerGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationInfo">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/pickup_location"
            android:textColor="@color/black"
            android:textSize="@dimen/_7sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pickupLocationTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/google_plex_mount_palo"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/centerGuide"
        app:layout_constraintTop_toBottomOf="@id/locationInfo">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/delivery_location"
            android:textColor="@color/black"
            android:textSize="@dimen/_7sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/deliveryLocationTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/google_plex_mount_palo"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.azure.android.maps.control.MapControl
        android:id="@+id/mapcontrol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/acceptJobBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickupLocationView"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acceptJobBtn"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_16sdp"
        android:background="@drawable/edittext_border"
        android:text="@string/accept_job"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startJobBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startJobBtn"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_9sdp"
        android:background="@drawable/edittext_border"
        android:text="@string/start_job"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/finishJobBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/acceptJobBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finishJobBtn"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_9sdp"
        android:background="@drawable/edittext_border"
        android:text="@string/finish_job"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startJobBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />
</androidx.constraintlayout.widget.ConstraintLayout>