<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_gravity="center"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginHorizontal="70dp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/edittext_border"
        android:paddingHorizontal="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_26sdp"
        android:background="@drawable/edittext_border"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/optionsBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/optionsBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_26sdp"
        android:background="@drawable/edittext_border"
        android:text="@string/options"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginBtn"
        app:layout_constraintTop_toTopOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>