<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_gravity="center"
    tools:context=".ui.options.OptionsFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/device_api_endpoint"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/deviceApiPointEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginHorizontal="70dp"
        android:textSize="@dimen/_14sdp"
        android:background="@drawable/edittext_border"
        android:inputType="textPhonetic"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/cloud_api_endpoint"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="@+id/cloudApiEt"
        app:layout_constraintTop_toBottomOf="@+id/deviceApiPointEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cloudApiEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginHorizontal="70dp"
        android:paddingHorizontal="@dimen/_3sdp"
        android:background="@drawable/edittext_border"
        android:inputType="textPhonetic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/serialNumberTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Serial Number"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="@+id/serialNumberEt"
        app:layout_constraintTop_toBottomOf="@+id/cloudApiEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/serialNumberEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/edittext_border"
        android:paddingHorizontal="@dimen/_3sdp"
        android:inputType="textPhonetic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialNumberTxt" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edittext_border"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/serialNumberEt"
        app:layout_constraintTop_toBottomOf="@+id/serialNumberEt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_24sdp"
        android:background="@drawable/edittext_border"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="@+id/cloudApiEt"
        app:layout_constraintTop_toTopOf="@+id/saveBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>